fix: 修改按鈕gap

--- a/assets/scss/helper/_utils.scss
+++ b/assets/scss/helper/_utils.scss
@@ -1,6 +1,11 @@
 /* 
 utils是通用樣式檔案
  */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
 .container {
   max-width: 1320px;
